# map-of-vibe-space-claude

./: .resource_finder_complete  README.md  REPORT.md  download_papers.py  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: sentence_embedding_space_visualization_clustering_20260323_165724.jsonl  text_embedding_visualization_semantic_similarity_20260323_165503.jsonl  web_navigation_semantic_graph_knowledge_representation_20260323_165921.jsonl
papers/: README.md
papers/pages/: 2310.04475_demystifying_embeddings_manifest.txt  2410.12851_vibecheck_manifest.txt  2505.06386_embedding_atlas_manifest.txt
results/: analysis_results.json  statistical_tests.json
results/data/: embeddings.npz  metadata.json  vibe_descriptions.json
src/: 01_sample_and_generate_vibes.py  02_embed_and_project.py  03_analyze_and_visualize.py  04_statistical_tests.py
